--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
-
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+// @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lato:wght@100;400;700;900&family=Poppins&display=swap");
 
 // $primary-color: #fcb264;
 // $secondary-color: #0d0d0e;
